--- a/package.json
+++ b/package.json
@@ -3,50 +3,46 @@
   "displayName": "Create Test File",
   "description": "Find or create empty test file with inferred location",
   "version": "0.0.1",
-  "publisher": "paul-mannino",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/paul-mannino/vscode-create-test-file"
-  },
   "engines": {
-    "vscode": "^1.35.0"
+    "vscode": "^1.79.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "onCommand:extension.createTestFile",
-    "onCommand:extension.findTestFile"
-  ],
+  "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "extension.createTestFile",
+        "command": "vscode-create-test-file.createTestFile",
         "title": "Create Test File"
       },
       {
-        "command": "extension.findTestFile",
+        "command": "vscode-create-test-file.findTestFile",
         "title": "Find Test File"
+      },
+      {
+        "command": "vscode-create-test-file.helloWorld",
+        "title": "Hello World"
       }
     ],
     "menus": {
       "explorer/context": [
         {
-          "command": "extension.createTestFile",
+          "command": "vscode-create-test-file.createTestFile",
           "when": "!explorerResourceIsFolder"
         },
         {
-          "command": "extension.findTestFile",
+          "command": "vscode-create-test-file.findTestFile",
           "when": "!explorerResourceIsFolder"
         }
       ],
       "editor/title/context": [
         {
-          "command": "extension.createTestFile"
+          "command": "vscode-create-test-file.createTestFile"
         },
         {
-          "command": "extension.findTestFile"
+          "command": "vscode-create-test-file.findTestFile"
         }
       ]
     },
@@ -98,14 +94,21 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "typescript": "^3.3.1",
-    "vscode": "^1.1.28",
-    "tslint": "^5.12.1",
-    "@types/node": "^10.12.21",
-    "@types/mocha": "^2.2.42"
+    "@types/vscode": "^1.79.0",
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.41.0",
+    "glob": "^8.1.0",
+    "mocha": "^10.2.0",
+    "typescript": "^5.1.3",
+    "@vscode/test-electron": "^2.3.2"
   }
 }
