:art: Rename testFilePath config option to testFilePathPattern.
Why? It now supports a generic regex path transform.

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
             "type": "object",
             "properties": {
               "pathPattern": "string",
-              "testFilePath": "string"
+              "testFilePathPattern": "string"
             }
           }
         },
