--- a/package.json
+++ b/package.json
@@ -98,7 +98,8 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "clean": "rm -rf ./out"
   },
   "devDependencies": {
     "@types/vscode": "^1.79.0",
